--- a/pipeline.yml
+++ b/pipeline.yml
@@ -26,5 +26,5 @@ resources:
   source:
     bucket: {{opsmanager-bucket-name}}
     access_key_id: {{opsmanager-bucket-key}}
-    secrect_access_key: {{opsmanager-bucket-secret}}
+    secret_access_key: {{opsmanager-bucket-secret}}
     region_name: {{opsmanager-bucket-region}}
