--- a/cfops-ci-sample.yml
+++ b/cfops-ci-sample.yml
@@ -1,18 +1,20 @@
-# Replace these with your own values:
-#   <git-username>
-#   <s3-bucket-name>
-#   <s3-access-key-id>
-#   <s3-secret-access-key>
-#   <s3-region-name>
 ---
 git-uri: https://github.com/<git-username>/cfops-ci.git
 git-branch: master
+
 # https://github.com/concourse/s3-resource
 opsmanager-host: <opsmanager-host>
 opsmanager-host-user: <opsmanager-host-user>
 opsmanager-admin-user: <opsmanager-admin-user>
 opsmanager-admin-pass: <opsmanager-admin-pass>
+
+# Use the same or different buckets for opsmangager & elasticruntime as you see fit!
 opsmanager-bucket-name: <s3-bucket-name>
 opsmanager-bucket-key: <s3-access-key-id>
 opsmanager-bucket-secret: <s3-secret-access-key>
-opsmanager-bucket-region: <s3-region-name>
+opsmanager-bucket-endpoint: s3.amazonaws.com
+
+elasticruntime-bucket-name: <s3-bucket-name>
+elasticruntime-bucket-key: <s3-access-key-id>
+elasticruntime-bucket-secret: <s3-secret-access-key>
+elasticruntime-bucket-endpoint: s3.amazonaws.com
